# Cheddar

./: .bazelrc  .bazelversion  .editorconfig  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-Cheddar  bazel-bin  bazel-out  bazel-testlogs  build.gradle  build.gradle.kts  debug.keystore  gradle.properties  rules_jvm_external~~maven~maven_install.json  settings.gradle  settings.gradle.kts
app/: BUILD.bazel  app-release.apk  build.gradle  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/co/adrianblan/boilerplate/: ExampleInstrumentedTest.kt
app/src/androidTest/java/co/adrianblan/cheddar/: ApplicationTest.java  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/co/adrianblan/boilerplate/: BaseApplication.kt  MainActivity.kt
app/src/main/java/co/adrianblan/boilerplate/di/: AppModule.kt
app/src/main/java/co/adrianblan/cheddar/: BaseApplication.kt  BuildConfig.kt  CheddarApplication.kt  Comment.java  CommentActivity.java  CommentAdapter.java  FeedAdapter.java  FeedFragment.java  FeedItem.java  JellyBeanCompatTextView.java  JsonParser.java  MainActivity.java  MainActivity.kt  Navigation.kt  RootActivity.kt  RootComposer.kt  RootNode.kt  RootViewModel.kt  Submission.java  TextViewFixTouchConsume.java  ThumbnailExtractor.java  ThumbnailSearcher.java  WebViewActivity.java
app/src/main/java/co/adrianblan/cheddar/activities/: CommentActivity.java  MainActivity.java  WebViewActivity.java
app/src/main/java/co/adrianblan/cheddar/di/: ActivityScope.kt  AppDi.kt  RootDi.kt  appDi.kt
app/src/main/java/co/adrianblan/cheddar/extensions/: ContextExt.kt  CustomTabs.kt
app/src/main/java/co/adrianblan/cheddar/feature/stories/: StoriesInteractor.kt  StoriesView.kt
app/src/main/java/co/adrianblan/cheddar/fragments/: FeedFragment.java
app/src/main/java/co/adrianblan/cheddar/models/: Comment.java  FeedItem.java
app/src/main/java/co/adrianblan/cheddar/utils/: Contexts.kt  CustomTabs.kt  DesignUtils.java  StringUtils.java
app/src/main/java/co/adrianblan/cheddar/views/: JellyBeanCompatTextView.java  TextViewFixTouchConsume.java
app/src/main/java/co/adrianblan/cheddar/views/adapters/: CommentAdapter.java  FeedAdapter.java
app/src/main/java/co/adrianblan/cheddar/views/listeners/: EndlessRecyclerOnScrollListener.java  FeedItemClickListener.java
app/src/main/kotlin/co/adrianblan/boilerplate/: BaseApplication.kt  MainActivity.kt
app/src/main/kotlin/co/adrianblan/boilerplate/di/: AppModule.kt
app/src/main/res/drawable/: hidden_children_background.xml
app/src/main/res/layout/: activity_comment.xml  activity_main.xml  activity_webview.xml  comment.xml  empty.xml  feed_item.xml  feed_item_alternate.xml  fragment_feed.xml
app/src/main/res/menu/: menu_comments.xml  menu_main.xml  menu_webview.xml
app/src/main/res/values/: color.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/co/adrianblan/boilerplate/: ExampleUnitTest.kt
app/src/test/java/co/adrianblan/cheddar/: ExampleUnitTest.kt  RootNodeTest.kt
core/common/: BUILD.bazel  build.gradle.kts
core/common/src/main/java/co/adrianblan/common/: AsyncResource.kt  CacheResource.kt  CustomTabs.kt  DispatcherProviders.kt  Flows.kt  Result.kt  StateFlows.kt  Urls.kt
core/common/src/test/java/co/adrianblan/common/: FlowTest.kt
core/domain/: BUILD.bazel  build.gradle.kts
core/domain/src/main/: AndroidManifest.xml
core/domain/src/main/java/co/adrianblan/domain/: CustomTabs.kt  StoryPreview.kt  StoryPreviewUseCase.kt
core/domain/src/main/java/co/adrianblan/domain/di/: CoreDi.kt  UseCaseModule.kt
core/domain/src/main/java/co/adrianblan/domain/utils/: CustomTabs.kt
core/hackernews/: AndroidManifest.xml  BUILD.bazel  build.gradle.kts
core/hackernews/src/main/java/co/adrianblan/hackernews/: FakeHackerNewsRepository.kt  HackerNewsModule.kt  HackerNewsRepository.kt
core/model/: BUILD.bazel  build.gradle.kts
core/model/src/main/java/co/adrianblan/model/: HackerNewsData.kt  HackerNewsPlaceholderData.kt  StoryType.kt  WebPreviewData.kt
core/network/: BUILD.bazel  build.gradle.kts
core/network/src/main/java/co/adrianblan/network/: NetworkModule.kt
core/testing/: BUILD.bazel  build.gradle.kts
core/testing/src/main/java/co/adrianblan/testing/: CoroutineTestRule.kt  TestStateFlow.kt  Utils.kt
core/ui/: BUILD.bazel  build.gradle.kts
core/ui/src/main/: AndroidManifest.xml
core/ui/src/main/java/co/adrianblan/ui/: AppTheme.kt  CollapsingToolbar.kt  Colors.kt  ErrorView.kt  Insets.kt  LinkIcon.kt  LoadingView.kt  RootView.kt  ShimmerView.kt  StoryImage.kt  ToolbarNestedScrollConnection.kt  Typography.kt  UrlImage.kt
core/ui/src/main/res/drawable/: splash_background.xml
core/ui/src/main/res/values/: colors.xml  strings.xml  styles.xml
core/ui/src/main/res/values-night/: colors.xml  styles.xml
core/webpreview/: BUILD.bazel  build.gradle.kts
core/webpreview/src/main/java/co/adrianblan/webpreview/: DocumentParser.kt  WebPreviewRepository.kt
feature/storydetail/: BUILD.bazel  build.gradle.kts
feature/storydetail/src/main/: AndroidManifest.xml
feature/storydetail/src/main/java/co/adrianblan/storydetail/: StoryDetailDi.kt  StoryDetailNavigation.kt  StoryDetailNode.kt  StoryDetailPresenter.kt  StoryDetailViewModel.kt  StoryDetailViewState.kt
feature/storydetail/src/main/res/values/: strings.xml
feature/storydetail/src/test/java/co/adrianblan/storydetail/: StoryDetailPresenterTest.kt  StoryDetailViewModelTest.kt
feature/storyfeed/: BUILD.bazel  build.gradle.kts
feature/storyfeed/src/main/: AndroidManifest.xml
feature/storyfeed/src/main/java/co/adrianblan/storyfeed/: PagingTransformer.kt  StoryFeedDi.kt  StoryFeedNavigation.kt  StoryFeedNode.kt  StoryFeedPresenter.kt  StoryFeedViewModel.kt  StoryFeedViewState.kt
feature/storyfeed/src/main/res/values/: strings.xml
feature/storyfeed/src/test/java/co/adrianblan/storyfeed/: PagingTest.kt  StoryFeedPresenterTest.kt  StoryFeedViewModelTest.kt
some/: AndroidManifest.xml  BUILD.bazel  MODULE.bazel  SparseArraySetTest.java  WORKSPACE
(+251 files in other folders)
