module(name = "cheddarapp")

remote_android_extensions = use_extension("@bazel_tools//tools/android:android_extensions.bzl", "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")

bazel_dep(name = "rules_java", version = "7.4.0")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.2")
bazel_dep(name = "rules_android", version = "0.5.1")
bazel_dep(name = "rules_kotlin", version = "1.9.6")

register_toolchains(
    "@rules_android//toolchains/android:android_default_toolchain",
    "@rules_android//toolchains/android_sdk:android_sdk_tools",
)

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm:0.3.4",
        "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3",
        "org.jetbrains.kotlinx:kotlinx-serialization-core:1.5.1",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1",
        "androidx.compose.runtime:runtime:1.0.0",
        "androidx.compose.ui:ui:1.0.0",
        "androidx.compose.material:material:1.0.0",
        "androidx.compose.ui:ui-tooling:1.2.0",
        "androidx.activity:activity:1.5.1",
        "androidx.activity:activity-compose:1.5.1",
        "androidx.activity:activity-ktx:1.5.1",
        "androidx.fragment:fragment:1.5.1",
        "org.jsoup:jsoup:1.16.1",
        "junit:junit:4.13.2",
        "com.jakewharton.timber:timber:5.0.1",
        "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0",
        "com.squareup.okhttp3:okhttp:4.9.3",
        "com.squareup.okhttp3:logging-interceptor:4.9.3",
        "com.squareup.retrofit2:retrofit:2.9.0",
        "com.google.dagger:dagger:2.45",
        "com.google.dagger:dagger-compiler:2.45",
        "com.google.dagger:hilt-android:2.48",
        "com.squareup.moshi:moshi:jar:1.15.1",
        "com.squareup.moshi:moshi-kotlin:jar:1.15.1",
        "com.squareup.moshi:moshi-kotlin-codegen:jar:1.15.1",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
