module(name = "cheddarapp")

remote_android_extensions = use_extension("@bazel_tools//tools/android:android_extensions.bzl", "remote_android_tools_extensions")

use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

bazel_dep(
    name = "rules_java",
    version = "7.9.0",
)

bazel_dep(
    name = "platforms",
    version = "0.0.10",
)

bazel_dep(
    name = "rules_robolectric",
    version = "4.13",
)

bazel_dep(
    name = "rules_android",
    version = "0.5.1",
)

bazel_dep(
    name = "rules_kotlin",
    version = "1.9.6",
)

#
#register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

#bazel_dep(
#    name = "rules_jvm_external",
#    version = "6.2",
#)

bazel_dep(
    name = "rules_jvm_external",
    version = "0.0",
)

archive_override(
    module_name = "rules_jvm_external",
    integrity = "sha256-gukGSHM/wBgkJhkXGgzMBtD36aYBzqVNuhYr5b3lL8g=",
    strip_prefix = "rules_jvm_external-9a10cae516d46ccce805d03b7886331bd55fb4c1",
    urls = ["https://github.com/bazelbuild/rules_jvm_external/archive/9a10cae516d46ccce805d03b7886331bd55fb4c1.tar.gz"],
)

register_toolchains(
    "@rules_android//toolchains/android:android_default_toolchain",
    "@rules_android//toolchains/android_sdk:android_sdk_tools",
)

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")

use_repo(android_sdk_repository_extension, "androidsdk")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    #    aar_import_bzl_label = "@rules_android//rules:rules.bzl",
    artifacts = [
        "org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm:0.3.4",
        "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3",
        "org.jetbrains.kotlinx:kotlinx-serialization-core:1.5.1",
        "org.jetbrains.kotlinx:kotlinx-serialization-runtime:jar:1.0-M1-1.4.0-rc",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1",
        "org.jsoup:jsoup:1.16.1",
        "junit:junit:4.13.2",
        "com.jakewharton.timber:timber:5.0.1",
        "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0",
        "com.squareup.okhttp3:okhttp:4.9.3",
        "com.squareup.okhttp3:logging-interceptor:4.9.3",
        "com.squareup.retrofit2:retrofit:2.9.0",
        "com.google.dagger:dagger:2.45",
        "com.google.dagger:dagger-compiler:2.45",
        "com.google.dagger:hilt-android:2.51",
        "com.squareup.moshi:moshi:jar:1.15.1",
        "com.squareup.moshi:moshi-kotlin:jar:1.15.1",
        "com.squareup.moshi:moshi-kotlin-codegen:jar:1.15.1",
        "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.8.1",
        "androidx.browser:browser:jar:1.5.0",
        "androidx.activity:activity:1.8.0-alpha06",
        "androidx.activity:activity-compose:1.5.1",
        "androidx.activity:activity-ktx:1.5.1",
        "androidx.fragment:fragment:1.5.1",
        "androidx.compose.material3:material3:jar:1.2.1",
        "androidx.loader:loader:1.0.0",
        "androidx.lifecycle:lifecycle-viewmodel:2.6.1",
        "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1",
        "androidx.compose.ui:ui-android:1.6.0",
        "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1",
        "androidx.lifecycle:lifecycle-process:2.4.1",
        "androidx.lifecycle:lifecycle-livedata-core:2.5.1",
        "androidx.collection:collection:1.0.0",
        "androidx.compose.material:material-ripple:1.6.0",
        "androidx.compose.runtime:runtime:1.6.0",
        "androidx.compose.material:material:1.6.8",
        "androidx.compose.ui:ui-graphics:1.6.0",
        "androidx.compose.ui:ui-text:1.6.8",
        "androidx.compose.ui:ui-unit:1.6.0",
        "androidx.compose.ui:ui-util:1.0.0",
        "androidx.compose.ui:ui-geometry:1.6.0",
        "androidx.compose.ui:ui-tooling:1.6.8",
        "androidx.lifecycle:lifecycle-common:2.5.1",
        "androidx.lifecycle:lifecycle-runtime:2.5.1",
        "io.coil-kt:coil:jar:2.5.0",
        "io.coil-kt:coil-svg:jar:2.7.0",
        "androidx.compose.material:material-icons-extended:jar:1.5.0",
        "androidx.compose.material:material-icons-core:jar:1.6.8",
        "io.coil-kt:coil-compose:jar:2.7.0",
        "androidx.compose.compiler:compiler:jar:1.5.12",
        "androidx.constraintlayout:constraintlayout:jar:2.1.4",
        "androidx.navigation:navigation-compose:jar:2.5.3",
        "androidx.lifecycle:lifecycle-common-java8:2.5.1",
        "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1",
        "androidx.hilt:hilt-lifecycle-viewmodel:jar:1.0.0-alpha03",
        "androidx.hilt:hilt-navigation-compose:jar:1.2.0",
        "androidx.constraintlayout:constraintlayout-compose:jar:1.1.0-alpha11",
        "androidx.lifecycle:lifecycle-viewmodel-compose:jar:2.6.1",
        "androidx.lifecycle:lifecycle-runtime-compose:jar:2.6.1",
        "androidx.core:core-splashscreen:aar:1.0.0-beta02",
        "app.cash.turbine:turbine-jvm:jar:1.1.0",
        "org.jetbrains.kotlin:kotlin-test:jar:2.0.0",
        "org.robolectric:robolectric:4.13",
        "com.google.truth:truth:1.1.2",
        "com.google.auto.value:auto-value:jar:1.11.0",
        "androidx.compose.ui:ui-tooling-preview:1.7.0",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    #    use_starlark_android_rules = True,
    version_conflict_policy = "pinned",
)

use_repo(maven, "maven")
