load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "lib",
    srcs = glob(["**/*.kt"]),
    custom_package = "co.adrianblan.webpreview",
    manifest = "src/main/AndroidManifest.xml",
    plugins = ["//:jetpack_compose_compiler_plugin"],
    resource_files = glob(["res/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//feature/storydetail:lib",
        "//feature/storyfeed:lib",
        "@maven//:androidx_activity_activity",
        "@maven//:androidx_core_core_splashscreen",
    ],
)
