load("@rules_android//android:rules.bzl", "android_local_test")

android_local_test(
    name = "SparseArraySetTest",
    srcs = ["SparseArraySetTest.java"],
    custom_package = "org.robolectric.integrationtests.sparsearray",
    test_class = "org.robolectric.integrationtests.sparsearray.SparseArraySetTest",
    deps = [
        "@maven//:com_google_truth_truth",
        "@maven//:org_robolectric_annotations",
        "@maven//:org_robolectric_robolectric",
        "@rules_robolectric//bazel:android-all",
    ],
)
