module(
    name = "rules_robolectric_examples_bzlmod",
    version = "TODO",
)

# I don't think this bazel_dep version actually matters because it's being overriden by the local_path_override.
bazel_dep(name = "rules_robolectric", version = "1", repo_name = "robolectric")
local_path_override(
    module_name = "rules_robolectric",
    path = "../..",
)

bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "rules_android", version = "0.1.1")
bazel_dep(name = "rules_jvm_external", version = "5.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.truth:truth:1.1.3",
        "org.robolectric:robolectric:4.13",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

remote_android_extensions = use_extension("@bazel_tools//tools/android:android_extensions.bzl", "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_gmaven_r8", "android_tools")
