load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "lib",
    srcs = glob(["**/*.kt"]),
    deps = [
        "//core/model:lib",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_android",
        "@maven//:junit_junit",
    ],
    visibility = ["//visibility:public"],
)