load("@rules_android//android:rules.bzl", "android_binary", "android_library")
load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin", "kt_ksp_plugin")

kt_compiler_plugin(
    name = "serialization_plugin",
    compile_phase = True,
    id = "org.jetbrains.kotlin.serialization",
    stubs_phase = True,
    deps = [
        "@rules_kotlin//kotlin/compiler:kotlinx-serialization-compiler-plugin",
    ],
)

kt_android_library(
    name = "lib",
    #    srcs = glob(["**/*.kt"]),
    srcs = glob(["src/**/*.kt"]),
    manifest = "src/main/AndroidManifest.xml",
    plugins = [
        ":serialization_plugin",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//core/common:lib",
        "@maven//:com_google_dagger_dagger",
        "@maven//:com_google_dagger_hilt_android",
        "@maven//:com_jakewharton_timber_timber",
    ],
)

#android_library(
#    name = "lib",
#    srcs = glob(["src/main/java/co/adrianblan/domain/**/*.kt"]),
#    manifest = "src/main/AndroidManifest.xml",
#)
