load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "lib",
    srcs = glob(["**/*.kt"]),
    deps = [
        "@maven//:androidx_compose_runtime_runtime",
        "@maven//:org_jetbrains_kotlinx_kotlinx_collections_immutable_jvm",
         "@maven//:com_google_dagger_dagger",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json_jvm",
    ],
    visibility = ["//visibility:public"],
)
