load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "lib",
    custom_package = "co.adrianblan.ui",
    srcs = glob(["src/main/java/**/*.kt"]),
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/res/**"]),
    deps = [

    ],
    visibility = ["//visibility:public"],
 )
