load("@rules_android//android:rules.bzl", "android_local_test")
load("@rules_kotlin//kotlin:android.bzl", "kt_android_library", "kt_android_local_test")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_android_library(
    name = "lib",
    srcs = glob(["src/main/**/*.kt"]),
    custom_package = "co.adrianblan.storydetail",
    manifest = "src/main/AndroidManifest.xml",
    plugins = ["//:jetpack_compose_compiler_plugin"],
    resource_files = glob(["src/main/res/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//core/domain:lib",
        "//core/hackernews:lib",
        "//core/ui:lib",
        "//core/webpreview:lib",
        "@maven//:androidx_activity_activity_compose",
        "@maven//:androidx_compose_animation_animation_core",
        "@maven//:androidx_compose_animation_animation_core_android",
        "@maven//:androidx_compose_foundation_foundation",
        "@maven//:androidx_compose_foundation_foundation_android",
        "@maven//:androidx_compose_foundation_foundation_layout",
        "@maven//:androidx_compose_material3_material3",
        "@maven//:androidx_compose_material3_material3_android",
        "@maven//:androidx_compose_material_material_icons_extended",
        "@maven//:androidx_compose_ui_ui_android",
        "@maven//:androidx_compose_ui_ui_geometry",
        "@maven//:androidx_compose_ui_ui_graphics_android",
        "@maven//:androidx_compose_ui_ui_text_android",
        "@maven//:androidx_compose_ui_ui_tooling_preview",
        "@maven//:androidx_compose_ui_ui_tooling_preview_android",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_compose",
        "@maven//:androidx_hilt_hilt_lifecycle_viewmodel",
        "@maven//:androidx_hilt_hilt_navigation_compose",
        "@maven//:androidx_lifecycle_lifecycle_runtime_compose",
        "@maven//:androidx_lifecycle_lifecycle_viewmodel_ktx",
        "@maven//:androidx_navigation_navigation_common",
        "@maven//:androidx_navigation_navigation_compose",
        "@maven//:org_robolectric_annotations",
        "@maven//:org_robolectric_junit",
        "@maven//:org_robolectric_nativeruntime",
        "@maven//:org_robolectric_nativeruntime_dist_compat",
        "@maven//:org_robolectric_pluginapi",
        "@maven//:org_robolectric_robolectric",
        "@maven//:org_robolectric_utils",
        "@maven//:org_robolectric_utils_reflector",
    ],
)

kt_android_local_test(
    name = "test",
    srcs = glob([
        "src/test/java/**/*.kt",
    ]),
    associates = [":lib_kt"],
    manifest = "src/main/AndroidManifest.xml",
    test_class = "co.adrianblan.storydetail.StoryDetailViewModelTest",
    visibility = ["//visibility:public"],
    deps = [
        ":lib",
        "//core/common:lib",
        "//core/domain:lib",
        "//core/hackernews:lib",
        "//core/testing:lib",
        "@maven//:app_cash_turbine_turbine_jvm",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@rules_robolectric//bazel:android-all",
    ],
)
