load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_compiler_plugin(
    name = "jetpack_compose_compiler_plugin",
    id = "androidx.compose.compiler",
    target_embedded_compiler = True,
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:androidx_compose_compiler_compiler",
    ],
)

kt_android_library(
    name = "lib",
    srcs = glob(["src/main/**/*.kt"]),
    custom_package = "co.adrianblan.storyfeed",
    manifest = "src/main/AndroidManifest.xml",
    plugins = [":jetpack_compose_compiler_plugin"],
    resource_files = glob(["src/main/res/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//core/domain:lib",
        "//core/hackernews:lib",
        "//core/ui:lib",
        "//core/webpreview:lib",
        "@maven//:androidx_activity_activity_compose",
        "@maven//:androidx_compose_material3_material3",
        "@maven//:androidx_compose_material3_material3_android",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_compose_ui_ui_android",
        "@maven//:androidx_compose_ui_ui_tooling_preview",
        "@maven//:androidx_compose_ui_ui_tooling_preview_android",
        "@maven//:androidx_hilt_hilt_lifecycle_viewmodel",
        "@maven//:androidx_hilt_hilt_navigation_compose",
        "@maven//:androidx_lifecycle_lifecycle_runtime_compose",
    ],
)

# TODO figure out how to expose internal values to test target. Friends is not an option for kt_android_library target type
kt_jvm_test(
    name = "test",
    srcs = glob(["src/test/**/*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        ":lib",
        "//core/common:lib",
        "//core/domain:lib",
        "//core/hackernews:lib",
        "//core/testing:lib",
        "@maven//:app_cash_turbine_turbine_jvm",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_test_jvm",
    ],
)
